# ur5e_pick_place_demo

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: demo.launch  gripper.launch  ur5e.launch
scripts/: pick_place_demo.py  wait_for_robot.sh
