<?xml version="1.0"?>
<package format="2">
  <name>ur5e_pick_place_demo</name>
  <version>0.0.1</version>
  <description>The ur5e_pick_place_demo package for UR5e pick and place tasks</description>

  <maintainer email="administrator@todo.todo">administrator</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>husky_ur_bringup</exec_depend>
  <exec_depend>robotiq_2f_85_modbus_tcp_node</exec_depend>

  <export>
  </export>
</package>